# cook

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
examples/: hello_world.cook  recipe_calculator.cook
extension/: .vscodeignore  INSTALL.md  README.md  extension.js  language-configuration.json  package-lock.json  package.json  test-intellisense.cook
extension/snippets/: cook.json
extension/syntaxes/: cook.tmLanguage.json
include/: ast.h  interpreter.h  lexer.h  parser.h
src/: ast.cpp  interpreter.cpp  lexer.cpp  lexer.py  main.cpp  parser.cpp  parser.py
